#68 - Add sync source test